apps/services/metube/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metube
  labels:
    app: metube
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metube
  template:
    metadata:
      labels:
        app: metube
    spec:
      containers:
        - name: metube
          image: ghcr.io/alexta69/metube:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
          volumeMounts:
            - name: downloads
              mountPath: /downloads
      volumes:
        - name: downloads
          nfs:
            server: 192.168.1.182
            path: /mnt/cronenberg/
