apps/services/metube/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metube-svc
spec:
  selector:
    app: metube
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
